# power-supply-dashboard-data-processor

./: .gitignore  .local-secrets.example  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alex-dvc-setup/: .pre-commit-config.yaml
alex-dvc-setup/.dvc/: config
alex-dvc-setup/docs/: Makefile  conf.py  index.md  make.bat  user-guide.md
alex-dvc-setup/power_dashboard/: app.py  electricity_maps.py  logging_config.py
cloud-function/: main.py
cloud-function/utils/: dashboard.py  dashboard_processing.py  electricity_maps.py  hydro_ottawa.py
data/raw/: .gitignore
docs/: getting-started.md  project-organization.md
notebooks/: electricity_maps.ipynb
power_dashboard/: __init__.py
