[tool.black]
line-length = 120
single-quotes = false
target-version = [""]
include = '\.pyi?$'
exclude = [".git",".idea",".vscode", ".dvc",".pytest_cache","docs"]

[tool.brunette]
line-length = 120
single-quotes = false
target-version = ["3.12"]
include = '\.pyi?$'
exclude = [".git",".idea",".vscode", ".dvc",".pytest_cache","docs"]

[tool.poetry]
name = "power_dashboard"
version = "0.1.0"
description = "Personalized dashboard providing location-based insight into carbon emissions intensity of the grid"
authors = ["Software x Climate project team <philip@simplexity.quest; toddkamin@hotmail.com; alex@hashadatascience.com>"]
readme = "README.md"
packages = [{include = "power_dashboard"}]



[tool.poetry.dependencies]
click = "^8.0.4"
dvc = "^3.38.0"
dvc-gs = "^3.0"
dvc-ssh = "^4.1.1"
functions-framework = "^3.8.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
python = "^3.12"
pandas = "^2.0.0"
requests = "^2.32.3"
scikit-learn = "^1.2.2"
python-dotenv = "^1.0.0"
streamlit = "^1.37.1"
googlemaps = "^4.10.0"
timezonefinder = "^6.5.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
nbsphinx = "^0.9.1"
pre-commit = "^3.2.2"
myst-parser = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"
pytest = "^7.3.1"
sphinxcontrib-mermaid = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
