[tool.poetry]
name = "power_dashboard_data_processor"
version = "0.1.0"
description = ""
authors = ["Software x Climate project team <philip@simplexity.quest; toddkamin@hotmail.com; alex@hashadatascience.com>"]
readme = "README.md"

[tool.poetry.dependencies]
functions-framework = "^3.8.1"
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
